--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,7 @@
+Gems Install:
+1) sudo apt-get install imagemagick -y
+2) Install paperclip https://github.com/thoughtbot/paperclip
+
 == README
 
 This README would normally document whatever steps are necessary to get the
